@@ -36,6 +36,38 @@ namespace OrthancPlugins
   }
     
 
+  Orthanc::ResourceType AuthorizationParserBase::AddOrthancUnknownResource(AccessedResources& target,
+                                                                           const std::string& orthancId)
+  {
+    std::string dicomId;
+    if (resourceHierarchy_->LookupDicomUid(dicomId, Orthanc::ResourceType_Study, orthancId))
+    {
+      AddOrthancStudy(target, orthancId);
+      return Orthanc::ResourceType_Study;
+    }
+
+    if (resourceHierarchy_->LookupDicomUid(dicomId, Orthanc::ResourceType_Patient, orthancId))
+    {
+      AddOrthancPatient(target, orthancId);
+      return Orthanc::ResourceType_Patient;
+    }
+
+    if (resourceHierarchy_->LookupDicomUid(dicomId, Orthanc::ResourceType_Series, orthancId))
+    {
+      AddOrthancSeries(target, orthancId);
+      return Orthanc::ResourceType_Series;
+    }
+
+    if (resourceHierarchy_->LookupDicomUid(dicomId, Orthanc::ResourceType_Instance, orthancId))
+    {
+      AddOrthancInstance(target, orthancId);
+      return Orthanc::ResourceType_Instance;
+    }
+
+    throw Orthanc::OrthancException(Orthanc::ErrorCode_UnknownResource);
+  }
+
+
   void AuthorizationParserBase::AddOrthancInstance(AccessedResources& target,
                                                    const std::string& orthancId)
   {
